@@ -23,7 +23,7 @@
     <title>seeon.tv</title>
 
     <!-- (required) Major.minor.build -->
-    <version>0.1.0</version>
+    <version>0.2.0</version>
 
     <!-- (required) author name & email.  at least one author name is required -->
     <authors>
